# fly-rs

./: .gitignore  Cargo.toml  README.md
examples/: machines.rs  volumes.rs
src/: apps.rs  lib.rs  secrets.rs  volumes.rs
src/machines/: api_manager.rs  checks.rs  endpoints.rs  machine.rs  mod.rs  networking.rs  process.rs  regions.rs  resources.rs  services.rs  system.rs
